--- a/packages/end-user/src/css/components/_file-input.scss
+++ b/packages/end-user/src/css/components/_file-input.scss
@@ -132,7 +132,7 @@ $image-input-size: 100px;
 
     &:after {
         font-family: $icon-font;
-        content: $icon-edit;
+        content: $pingicon-edit;
         font-size: 16px;
         height: $size;
         width: $size;
