--- a/packages/end-user/src/css/components/_modal-menu.scss
+++ b/packages/end-user/src/css/components/_modal-menu.scss
@@ -60,7 +60,7 @@ $modal-menu-button-radius: 4px;
 
             &:after {
                 font-family: $icon-font;
-                content: $icon-success-round;
+                content: $pingicon-success-round;
                 font-size: 14px;
                 line-height: 14px;
                 color: $color-success;
