--- a/packages/end-user/src/css/components/_step-link.scss
+++ b/packages/end-user/src/css/components/_step-link.scss
@@ -9,7 +9,7 @@
 
         &:after {
             font-family: $icon-font;
-            content: $icon-dropdown-arrow;
+            content: $pingicon-dropdown-arrow;
             font-size: 10px;
             line-height: 10px;
             color: $color-active-blue;
