--- a/packages/end-user/src/css/icons/_variables.scss
+++ b/packages/end-user/src/css/icons/_variables.scss
@@ -1,141 +1,141 @@
 $icomoon-font-family: "iconfont" !default;
 $icomoon-font-path: "./fonts/icons" !default;
 
-$icon-camera: "\e935";
-$icon-email: "\e936";
-$icon-ghost-disabled: "\e937";
-$icon-ghost-timed-out: "\e938";
-$icon-spinner: "\e939";
-$icon-error: "\e93a";
-$icon-hour-glass: "\e93b";
-$icon-safe: "\e93c";
-$icon-success: "\e93d";
-$icon-ghost-error: "\e93e";
-$icon-ghost-success: "\e93f";
-$icon-incomplete: "\e940";
-$icon-mobile: "\e941";
-$icon-account: "\61";
-$icon-admin-account: "\74";
-$icon-alert: "\21";
-$icon-alert-solid: "\e900";
-$icon-approve: "\70";
-$icon-apps: "\6c";
-$icon-as: "\e904";
-$icon-badge: "\62";
-$icon-bar-chart: "\e90f";
-$icon-bar-line-chart: "\e913";
-$icon-beaker: "\e90a";
-$icon-books: "\e903";
-$icon-browser: "\e917";
-$icon-bullet-list: "\e920";
-$icon-cabinet: "\24";
-$icon-calendar: "\43";
-$icon-cert-connection: "\e925";
-$icon-certificate: "\e901";
-$icon-chat: "\e90e";
-$icon-chat-square: "\e918";
-$icon-circle: "\2e";
-$icon-circle-o: "\4f";
-$icon-clear: "\58";
-$icon-clipboard: "\e908";
-$icon-close: "\78";
-$icon-close-arrow: "\5e";
-$icon-code: "\e91d";
-$icon-cog: "\67";
-$icon-cog-filled: "\e919";
-$icon-cogs: "\e91c";
-$icon-collapse: "\63";
-$icon-connection-status: "\e931";
-$icon-curly-braces: "\e921";
-$icon-delete: "\64";
-$icon-desktop: "\e916";
-$icon-details: "\e902";
-$icon-device: "\e906";
-$icon-directory: "\3d";
-$icon-directory-hollow: "\23";
-$icon-docs: "\e927";
-$icon-download: "\44";
-$icon-dropdown-arrow: "\76";
-$icon-earth: "\e905";
-$icon-edit: "\65";
-$icon-error-triangle: "\e914";
-$icon-expand: "\45";
-$icon-expand-arrow: "\59";
-$icon-facebook: "\e929";
-$icon-file: "\2c";
-$icon-filter: "\66";
-$icon-fingerprint: "\e909";
-$icon-globe: "\a1";
-$icon-grip: "\47";
-$icon-group: "\e907";
-$icon-help: "\68";
-$icon-help-rounded: "\48";
-$icon-help-solid: "\e91e";
-$icon-idp: "\6a";
-$icon-image: "\69";
-$icon-info: "\49";
-$icon-key: "\4b";
-$icon-left: "\3c";
-$icon-line-chart: "\e92c";
-$icon-link: "\6b";
-$icon-linkedin: "\e92b";
-$icon-lock: "\42";
-$icon-lock-large: "\4c";
-$icon-lockout: "\e912";
-$icon-menu: "\6d";
-$icon-minus: "\2d";
-$icon-minus-rounded: "\5f";
-$icon-native-app: "\e934";
-$icon-network: "\25";
-$icon-new-window: "\e91f";
-$icon-next: "\7d";
-$icon-nodes: "\e911";
-$icon-non-interactive: "\e91a";
-$icon-notepad: "\e90b";
-$icon-on-off: "\e910";
-$icon-org-chart: "\e915";
-$icon-overview: "\6f";
-$icon-pin: "\4e";
-$icon-play: "\e90c";
-$icon-plus: "\2b";
-$icon-plus-rounded: "\2a";
-$icon-population: "\e923";
-$icon-previous: "\7b";
-$icon-puzzle: "\7a";
-$icon-radar: "\e90d";
-$icon-resend: "\72";
-$icon-resource: "\e922";
-$icon-right: "\3e";
-$icon-robot: "\e926";
-$icon-saml: "\e930";
-$icon-search: "\73";
-$icon-server: "\20ac";
-$icon-settings: "\53";
-$icon-shield: "\e91b";
-$icon-signpost: "\e933";
-$icon-slider: "\7e";
-$icon-sort-asc: "\41";
-$icon-sort-desc: "\2200";
-$icon-sort-none: "\7c";
-$icon-sp: "\7f";
-$icon-spin-down: "\30";
-$icon-spin-up: "\31";
-$icon-spinner1: "\50";
-$icon-success1: "\79";
-$icon-success-round: "\e92e";
-$icon-support: "\71";
-$icon-tag: "\e924";
-$icon-terminal: "\e928";
-$icon-thumb: "\54";
-$icon-timer: "\e932";
-$icon-twitter: "\e92a";
-$icon-undo: "\6e";
-$icon-unlink: "\e92d";
-$icon-user: "\75";
-$icon-user_directory: "\e92f";
-$icon-users: "\55";
-$icon-view: "\56";
-$icon-view-hidden: "\2f";
-$icon-walkthrough: "\4d";
-$icon-wand: "\57";
-$icon-welcome: "\77";
+$pingicon-camera: "\e935";
+$pingicon-email: "\e936";
+$pingicon-ghost-disabled: "\e937";
+$pingicon-ghost-timed-out: "\e938";
+$pingicon-spinner: "\e939";
+$pingicon-error: "\e93a";
+$pingicon-hour-glass: "\e93b";
+$pingicon-safe: "\e93c";
+$pingicon-success: "\e93d";
+$pingicon-ghost-error: "\e93e";
+$pingicon-ghost-success: "\e93f";
+$pingicon-incomplete: "\e940";
+$pingicon-mobile: "\e941";
+$pingicon-account: "\61";
+$pingicon-admin-account: "\74";
+$pingicon-alert: "\21";
+$pingicon-alert-solid: "\e900";
+$pingicon-approve: "\70";
+$pingicon-apps: "\6c";
+$pingicon-as: "\e904";
+$pingicon-badge: "\62";
+$pingicon-bar-chart: "\e90f";
+$pingicon-bar-line-chart: "\e913";
+$pingicon-beaker: "\e90a";
+$pingicon-books: "\e903";
+$pingicon-browser: "\e917";
+$pingicon-bullet-list: "\e920";
+$pingicon-cabinet: "\24";
+$pingicon-calendar: "\43";
+$pingicon-cert-connection: "\e925";
+$pingicon-certificate: "\e901";
+$pingicon-chat: "\e90e";
+$pingicon-chat-square: "\e918";
+$pingicon-circle: "\2e";
+$pingicon-circle-o: "\4f";
+$pingicon-clear: "\58";
+$pingicon-clipboard: "\e908";
+$pingicon-close: "\78";
+$pingicon-close-arrow: "\5e";
+$pingicon-code: "\e91d";
+$pingicon-cog: "\67";
+$pingicon-cog-filled: "\e919";
+$pingicon-cogs: "\e91c";
+$pingicon-collapse: "\63";
+$pingicon-connection-status: "\e931";
+$pingicon-curly-braces: "\e921";
+$pingicon-delete: "\64";
+$pingicon-desktop: "\e916";
+$pingicon-details: "\e902";
+$pingicon-device: "\e906";
+$pingicon-directory: "\3d";
+$pingicon-directory-hollow: "\23";
+$pingicon-docs: "\e927";
+$pingicon-download: "\44";
+$pingicon-dropdown-arrow: "\76";
+$pingicon-earth: "\e905";
+$pingicon-edit: "\65";
+$pingicon-error-triangle: "\e914";
+$pingicon-expand: "\45";
+$pingicon-expand-arrow: "\59";
+$pingicon-facebook: "\e929";
+$pingicon-file: "\2c";
+$pingicon-filter: "\66";
+$pingicon-fingerprint: "\e909";
+$pingicon-globe: "\a1";
+$pingicon-grip: "\47";
+$pingicon-group: "\e907";
+$pingicon-help: "\68";
+$pingicon-help-rounded: "\48";
+$pingicon-help-solid: "\e91e";
+$pingicon-idp: "\6a";
+$pingicon-image: "\69";
+$pingicon-info: "\49";
+$pingicon-key: "\4b";
+$pingicon-left: "\3c";
+$pingicon-line-chart: "\e92c";
+$pingicon-link: "\6b";
+$pingicon-linkedin: "\e92b";
+$pingicon-lock: "\42";
+$pingicon-lock-large: "\4c";
+$pingicon-lockout: "\e912";
+$pingicon-menu: "\6d";
+$pingicon-minus: "\2d";
+$pingicon-minus-rounded: "\5f";
+$pingicon-native-app: "\e934";
+$pingicon-network: "\25";
+$pingicon-new-window: "\e91f";
+$pingicon-next: "\7d";
+$pingicon-nodes: "\e911";
+$pingicon-non-interactive: "\e91a";
+$pingicon-notepad: "\e90b";
+$pingicon-on-off: "\e910";
+$pingicon-org-chart: "\e915";
+$pingicon-overview: "\6f";
+$pingicon-pin: "\4e";
+$pingicon-play: "\e90c";
+$pingicon-plus: "\2b";
+$pingicon-plus-rounded: "\2a";
+$pingicon-population: "\e923";
+$pingicon-previous: "\7b";
+$pingicon-puzzle: "\7a";
+$pingicon-radar: "\e90d";
+$pingicon-resend: "\72";
+$pingicon-resource: "\e922";
+$pingicon-right: "\3e";
+$pingicon-robot: "\e926";
+$pingicon-saml: "\e930";
+$pingicon-search: "\73";
+$pingicon-server: "\20ac";
+$pingicon-settings: "\53";
+$pingicon-shield: "\e91b";
+$pingicon-signpost: "\e933";
+$pingicon-slider: "\7e";
+$pingicon-sort-asc: "\41";
+$pingicon-sort-desc: "\2200";
+$pingicon-sort-none: "\7c";
+$pingicon-sp: "\7f";
+$pingicon-spin-down: "\30";
+$pingicon-spin-up: "\31";
+$pingicon-spinner1: "\50";
+$pingicon-success1: "\79";
+$pingicon-success-round: "\e92e";
+$pingicon-support: "\71";
+$pingicon-tag: "\e924";
+$pingicon-terminal: "\e928";
+$pingicon-thumb: "\54";
+$pingicon-timer: "\e932";
+$pingicon-twitter: "\e92a";
+$pingicon-undo: "\6e";
+$pingicon-unlink: "\e92d";
+$pingicon-user: "\75";
+$pingicon-user_directory: "\e92f";
+$pingicon-users: "\55";
+$pingicon-view: "\56";
+$pingicon-view-hidden: "\2f";
+$pingicon-walkthrough: "\4d";
+$pingicon-wand: "\57";
+$pingicon-welcome: "\77";
