--- a/packages/ui-library/src/css/wizard.scss
+++ b/packages/ui-library/src/css/wizard.scss
@@ -95,7 +95,7 @@ $wizard-close-button-color: $color-strong-neutral-40;
     &-close-btn {
         z-index: $zindex__elevated;
         float: right;
-        margin: 20px 15px 0 0;
+        margin: 20px 20px 0 0;
         padding: 0;
         border: none;
         background: none;
@@ -221,7 +221,7 @@ $wizard-close-button-color: $color-strong-neutral-40;
             top: 0;
             bottom: 0;
             overflow-y: auto;
-            width: $wizard-progress-menu-width + $wizard-selected-arrow-width;
+            width: $wizard-progress-menu-width;
         }
 
         &__title {
