--- a/packages/ui-library/src/css/ui-library.scss
+++ b/packages/ui-library/src/css/ui-library.scss
@@ -13,6 +13,7 @@
 @import 'collapsible-section';
 @import 'colorpicker';
 @import 'data-sets';
+@import 'demo-tutorial';
 @import 'details-page';
 @import 'details-tooltip';
 @import 'help';
